...
                      );
                    },
                    icon: const Icon(
                      Icons.mail,
                    ),
                    label: Text(
                      "Sign in with email".toUpperCase(),
                      style: const TextStyle(
                        fontSize: 15.0,
                        fontWeight: FontWeight.w500,
                      ),
                    ),
                    style: ButtonStyle(
...
